syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "vouchergrpc/";


service VoucherService {
  rpc CheckoutVoucherForPurchase(CheckoutVoucherRequest) returns (CheckoutVoucherResponse){}
  rpc ApplyVoucherToPurchase(ApplyVoucherRequest) returns(ApplyVoucherResponse){}
}

message CheckoutVoucherRequest {
  int64 order_total_amount = 1;
  int32 payment_method = 2;
  VoucherData voucher_data = 3;
  string user_id = 4;
}

message CheckoutVoucherResponse {
  VoucherDetail voucher_detail = 1;
}

message VoucherData {
  string voucher_code = 1;
}

message VoucherDetail {
  string id = 1;
  string voucher_code = 2;
  int32 voucher_type = 3;
  int32 voucher_counts = 4;
  string detail = 5;
  string owner_voucher = 6;
  int32 status = 7;
  CheckingDiscountData discount_data = 8;
  CheckingVoucherRequire voucher_require = 9;
  google.protobuf.Timestamp stated_time = 10;
  google.protobuf.Timestamp ended_time = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message CheckingVoucherRequire {
  int64 min_require = 1;
  int32 payment_method = 2;
  int32 max_voucher_per_user = 3;
}

message CheckingDiscountData {
  int32 discount_type = 1;
  uint64 shipping_value = 2;
  uint64 discount_value = 3;
  float discount_percent = 4;
  uint64 maximum_value = 5;
}

message ApplyVoucherRequest {
  string user_id = 1;
  CheckoutRequest checkout_data = 2;
  repeated string vouchers = 3;
}

message CheckoutRequest {
  string checkout_id = 1;
  repeated string order_ids = 2;
}

message ApplyVoucherResponse {
  bool is_success = 1;
}
